2022-01-05 Bjoern Bornkamp (version 1.0-3)
      * Stop and throw error if calculated df=0 in powMCT (passed to
	mvtnorm where df=0 implies use of a normal distribution)
      * Added function plotMods to plot candidate models using ggplot2
	and function plotContr to plot optimal contrasts using ggplot2
	(thanks to Sophie Sun for testing and feedback)
      * Added documentation for quadratic model (definition of delta)
      * Fixed local options in guesst for logistic and sigEmax models

2021-10-03 Bjoern Bornkamp (version 1.0-2)
      * Define USE_FC_LEN_T and add length of character arguments in
	Fortran code called from C, to reflect recent changes in gfortran.
      * Fix incorrect error message in fitMod (in case placAdj = TRUE and
	data are handed over in a data frame via data argument)

2021-06-22 Bjoern Bornkamp (version 1.0-1)
      * Big thanks to Ludger Sandig, who was instrumental in adding
	vignettes for practical MCP-Mod implementation guidance;
	introducing tests based on testthat and further bug fixes.
      * Thanks to Dong Xi, Hilke Kracker for review of earlier versions of
	the draft vignettes
      * Thanks to Julia Duda for her helpful comments on the package

2019-11-13 Bjoern Bornkamp (version 0.9-17)
      * Added citation to DESCRIPTION file
      * Removed alpha argument for pValues function (not used)
      * Propagate error messages from mvtnorm in pValues function
	(e.g. cov-matrix not psd), (thx to Daisy Bai)
      * Make direction attribute in Mods object unique (thx to Yuhan Li)

2017-12-07 Bjoern Bornkamp (version 0.9-16)
      * Fixed minor bug in print.summary.planMod

2016-07-26 Bjoern Bornkamp (version 0.9-15)
      * Mods Added parameter names for all models in the output list
        (thanks to Dong Xi for catching this)

2016-02-02 Bjoern Bornkamp (version 0.9-14)
      * planMod.Rd Documentation slightly extended.
      * qmvtDF moved back to qmvt function from mvtnorm, as problems
	in mvtnorm are fixed.
