@@ -123,4 +123,4 @@
   volume = 	 104,
   issue = 	 10,
   pages = 	 {1482-1489},
-  doi = 	 {10.1016/j.rmed.2010.04.006 }}
+  doi = 	 {10.1016/j.rmed.2010.04.006}}
