@@ -1,4 +1,8 @@
-2022-01-05 Bjoern Bornkamp (version 1.0-3)
+2023-05-18 Bjoern Bornkamp (version 1.0-4)
+      * Added non-exported function powMCTBinCount, for power calculation
+	for binary and count data.
+
+2023-01-05 Bjoern Bornkamp (version 1.0-3)
       * Stop and throw error if calculated df=0 in powMCT (passed to
 	mvtnorm where df=0 implies use of a normal distribution)
       * Added function plotMods to plot candidate models using ggplot2
